--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@hello-pangea/dnd": "^18.0.1",
-    "@mantine/core": "^7.3.2",
+    "@mantine/core": "^7.17.8",
     "@mantine/dates": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
-    "@tabler/icons-react": "^3.36.1",
+    "@tabler/icons-react": "^3.37.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "html-to-image": "^1.11.13",
     "lodash": "^4.17.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
